# fitness-club

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/admin/: __init__.py  auth.py  panel.py
backend/api/: __init__.py  auth.py  base.py  reviews.py  users.py
backend/core/: admin.py  config.py  database.py  models.py  security.py
backend/dependencies/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_02_23_0805-122fca8ee26d_new_rev_format.py  2025_02_23_1032-021cb1e74d0d_user_model.py  2025_02_23_1035-01833c2dfed7_user_attemp2.py  2025_02_23_1036-ac9854277cda_attemp3.py  2025_02_23_1039-f4b0eba6fb63_autofetch_user_model.py  2025_02_25_0250-659cde87675a_new_dynamic_load_test.py  2025_03_04_0630-dc4915a522c1_refactored_imports.py  2025_03_04_1936-50369dd0801f_test_refactored.py  2025_03_04_1942-c89612a7ed37_new_import_model_system.py  2025_03_04_1950-e1c48bcffccc_new_import_systeeem.py  2025_03_13_1444-ef85e513848c_rbac_models.py  2025_03_15_1440-d2516740ab03_relationship_fix.py  2025_03_19_1903-a390ee6645c1_migration_history_fix.py  2025_03_24_1532-e4fa91239d62_new_perms.py  (+3 more)
backend/models/: __init__.py  documents.py  exercises.py  mongo.py  mongodb.py  permissions.py  rbac.py  reviews.py  users.py
backend/repositories/: __init__.py  base.py  rbac.py  reviews.py  users.py
backend/schemas/: auth.py  base.py  permissions.py  rbac.py  reviews.py  users.py
backend/services/: __init__.py  auth.py  permissions.py  rbac.py  reviews.py  users.py
backend/utils/: modules.py
(+32 files in other folders)
